--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,60 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Task List 2021</title>
-
+    <script src="https://kit.fontawesome.com/0986276ece.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="main.css" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-	
-	
-
+	<div class="upper-container">
+		<header>
+				<div class="header-content">
+					<h1 class="header-text">Book List</h1>
+					<form id="new-task-form">
+						<input type="text" class="search" id="new-task-input" placeholder="type name"/>
+						<button type="button" class="search-text">Search</button>
+					</form>
+				</div>
+				<div class="header-content">
+					<div class="inner-content">
+						<a href="addBook.html">ADD-BOOK</h2>
+					</div>
+				</div>
+		</header>
+		<div class="table-books">
+			<h1 class="text-center">Get Books</h1>
+			<div class="container">
+				<table class="table table-bordered">
+					<thead class="table-dark">
+						<tr>
+							<th scope="col">ISBN</th>
+							<th scope="col">Name</th>
+							<th scope="col">Price</th>
+							<th scope="col">Author</th>
+							<th scope="col">Country</th>
+							<th scope="col">Pages</th>
+							<th scope="col">Year</th>
+							<th scope="col">Stocks</th>
+							<th scope="col">Digital Form</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>mark</td>
+							<td>otto</td>
+							<td>@mdo</td>
+							<td>mark</td>
+							<td>otto</td>
+							<td>@mdo</td>
+							<td>mark</td>
+							<td>otto</td>
+							<td>mark</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div>
 	<script src="main.js"></script>
 </body>
 </html>
