--- a/frontend/update.html
+++ b/frontend/update.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Task List 2021</title>
     <script src="https://kit.fontawesome.com/0986276ece.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" href="addBook.css" />
+	<link rel="stylesheet" href="updateBook.css" />
 </head>
 <body>
-    <form class="form">
-        <div class="title">Add Books</div>
+    <div class="form">
+        <div class="title">Update Books</div>
         <!-- <div class="subtitle">Let's create your account!</div> -->
         <div class="input-container ic1">
           <input id="firstname" class="input" type="text" placeholder=" " />
@@ -52,8 +52,7 @@
             <div class="cut cut-short"></div>
             <label for="email" class="placeholder">digitalform</>
           </div>
-        <button type="text" class="submit">Add</button>
-      </form>
-      <script src="addBook.js"></script>
+        <button type="text" class="submit">Update</button>
+    </div>
 </body>
 </html>
