--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,13 +15,13 @@
 				<div class="header-content">
 					<h1 class="header-text">Book List</h1>
 					<form id="new-task-form">
-						<input type="text" class="search" id="new-task-input" placeholder="type name"/>
+						<input type="text" class="search" id="new-task-input" placeholder="type name" onkeyup="searchFun()"/>
 						<button type="button" class="search-text">Search</button>
 					</form>
 				</div>
 				<div class="header-content">
 					<div class="inner-content">
-						<a href="addBook.html">ADD-BOOK</h2>
+						<a href="addBook.html">ADD-BOOK</h2> 
 					</div>
 				</div>
 		</header>
@@ -35,14 +35,15 @@
 							<th scope="col">Name</th>
 							<th scope="col">Price</th>
 							<th scope="col">Author</th>
-							<th scope="col">Country</th>
+							<th scope="col">Origin</th>
 							<th scope="col">Pages</th>
 							<th scope="col">Year</th>
 							<th scope="col">Stocks</th>
 							<th scope="col">Digital Form</th>
+							
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="table_body">
 						<tr>
 							<td>mark</td>
 							<td>otto</td>
